# python_fastapi_products_categories_listing

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 2c28bae63159_add_products_table.py  2f1639f613ed_add_categories_table.py  5a001c0e0f2a_add_users_table.py
app/routes/: category_routes.py  deps.py  poc.py  product_routes.py  user_routes.py
app/schemas/: base.py  category.py  product.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
app/use_cases/: category.py  product.py  user.py
