[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["CaioSobreira <caio.mlima@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"
pytest = "^7.4.0"
alembic = "^1.11.2"
python-decouple = "^3.8"
httpx = "^0.24.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
fastapi-pagination = "^0.12.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
